--- a/.golangci.yml
+++ b/.golangci.yml
@@ -12,6 +12,7 @@ linters:
     - execinquery
     - exhaustive
     - exhaustruct
+    - exportloopref
     - forbidigo
     - funlen
     - gochecknoglobals
