update: config for golangci-lint

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,10 +1,9 @@
+version: "2"
 run:
-  timeout: 5m
-  allow-parallel-runners: true
   tests: false
-
+  allow-parallel-runners: true
 linters:
-  enable-all: true
+  default: all
   disable:
     - cyclop
     - depguard
@@ -19,24 +18,32 @@ linters:
     - mnd
     - nlreturn
     - revive
-    - stylecheck
-    - tenv
     - varnamelen
     - wsl
-
-linters-settings:
-  gocyclo:
-    min-complexity: 20
-
-issues:
-  exclude-use-default: false
-  exclude-generated: lax
-  exclude-dirs-use-default: false
-  exclude-dirs:
-    - cmd
-    - test
-    - example
-  exclude-files:
-    - '(.+)_test\.go'
-    - '(.+)_mock\.go'
-    - '(.+)_prop\.go'
+  settings:
+    gocyclo:
+      min-complexity: 20
+  exclusions:
+    generated: lax
+    paths:
+      - (.+)_test\.go
+      - (.+)_mock\.go
+      - (.+)_prop\.go
+      - cmd
+      - test
+      - example
+formatters:
+  enable:
+    - gci
+    - gofmt
+    - gofumpt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - (.+)_test\.go
+      - (.+)_mock\.go
+      - (.+)_prop\.go
+      - cmd
+      - test
+      - example
