--- a/.github/workflows/check_and_test.yml
+++ b/.github/workflows/check_and_test.yml
@@ -15,5 +15,7 @@ jobs:
     - uses: golangci/golangci-lint-action@v8
       with:
         version: latest
+        args: ./internal/... ./public/...
     - run: make test
+    - run: make example/run
     - run: make container/build
